--- a/src/app/products/pages/product-page/product-page.component.html
+++ b/src/app/products/pages/product-page/product-page.component.html
@@ -1,1 +1,33 @@
-<p>product-page works!</p>
+<h1>Agregar producto</h1>
+<hr>
+
+<form>
+
+<div class="row g-3 align-items-center mb-3">
+
+    <div class="col-auto">
+        <label>Nombre:</label>
+    </div>
+
+    <div class="col-auto">
+        <input type="text" class="form-control">
+    </div>
+
+    <div class="col-auto">
+        <span >Algo de información</span>
+    </div>
+
+</div>
+
+<div class="row">
+    <div class="col">
+        <button class="btn btn-primary">
+            Cambiar color
+        </button>
+    </div>
+</div>
+
+
+
+
+</form>
