--- a/src/app/products/pages/product-page/product-page.component.html
+++ b/src/app/products/pages/product-page/product-page.component.html
@@ -1,33 +1,29 @@
-<h1>Agregar producto</h1>
-<hr>
+<h1>Agregar Producto</h1>
+<hr />
 
-<form>
-
-<div class="row g-3 align-items-center mb-3">
-
+<form [formGroup]="myForm">
+  <div class="row g-3 align-items-center mb-3">
     <div class="col-auto">
-        <label>Nombre:</label>
+      <label>Nombre:</label>
     </div>
 
     <div class="col-auto">
-        <input type="text" class="form-control">
+      <input formControlName="name" type="text" class="form-control" />
     </div>
 
     <div class="col-auto">
-        <span >Algo de información</span>
+      <span customLabel [color]="color">Temporal</span>
     </div>
+  </div>
 
-</div>
-
-<div class="row">
+  <div class="row">
     <div class="col">
-        <button class="btn btn-primary">
-            Cambiar color
-        </button>
+      <button (click)="changeColor()" class="btn btn-primary">
+        Cambiar color
+      </button>
     </div>
-</div>
-
-
-
-
+  </div>
 </form>
+
+<pre class="mt-5">{{ myForm.get("name")?.errors | json }}</pre>
+<p>Color: {{ color }}</p>
