--- a/src/app/products/pages/product-page/product-page.component.html
+++ b/src/app/products/pages/product-page/product-page.component.html
@@ -1,19 +1,27 @@
 <h1>Agregar Producto</h1>
-<hr />
+<hr>
 
 <form [formGroup]="myForm">
+
   <div class="row g-3 align-items-center mb-3">
+
     <div class="col-auto">
       <label>Nombre:</label>
     </div>
 
     <div class="col-auto">
-      <input formControlName="name" type="text" class="form-control" />
+
+      <input formControlName="name" type="text" class="form-control">
+
     </div>
 
     <div class="col-auto">
-      <span customLabel [color]="color" [errors]="myForm.get('name')?.errors" >Temporal</span>
+      <span customLabel
+        [color]="color"
+        [errors]="myForm.get('name')?.errors"
+      >Temporal</span>
     </div>
+
   </div>
 
   <div class="row">
@@ -23,7 +31,10 @@
       </button>
     </div>
   </div>
+
+
 </form>
 
-<pre class="mt-5">{{ myForm.get("name")?.errors | json }}</pre>
+
+<pre class="mt-5">{{ myForm.get('name')?.errors | json }}</pre>
 <p>Color: {{ color }}</p>
